--- a/src/Intro.css
+++ b/src/Intro.css
@@ -1,15 +1,17 @@
 .introBox {
-    height: 40rem;
-    width: 50rem;
+    width: 80%;
+    padding:2rem;
     border: 3px solid black;
     background-color: white;
-    margin: auto;
+    margin:3rem auto;
     font-family: Open Sans;
     font-weight: bolder;
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    overflow: hidden;
+    vertical-align: middle;
+    /* margin-top: 10%;
+    margin-bottom: 10%;
+    overflow: hidden; */
+    display:inline-flexbox;
   }
 
   .eightbit-btn {
